logs/webdiff.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyGithub-1.25.2.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/binaryornot'...
Listing './lib/python3.5/site-packages/binaryornot-0.4.4.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/webdiff'...
Listing './lib/python3.5/site-packages/webdiff/static'...
Listing './lib/python3.5/site-packages/webdiff/static/codediff.js'...
Listing './lib/python3.5/site-packages/webdiff/static/components'...
Listing './lib/python3.5/site-packages/webdiff/static/components/highlightjs'...
Listing './lib/python3.5/site-packages/webdiff/static/components/highlightjs/styles'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/dist'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/ajax'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/ajax/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/attributes'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/core'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/core/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/css'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/css/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/data'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/data/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/effects'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/event'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/exports'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/manipulation'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/manipulation/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/queue'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/sizzle'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/sizzle/dist'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/traversing'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/traversing/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/jquery/src/var'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/dist'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs/api'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs/api/components'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs/api/misc'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs/api/mixins'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/docs/guides'...
Listing './lib/python3.5/site-packages/webdiff/static/components/react-router/scripts'...
Listing './lib/python3.5/site-packages/webdiff/static/components/underscore'...
Listing './lib/python3.5/site-packages/webdiff/static/css'...
Listing './lib/python3.5/site-packages/webdiff/static/css/Inconsolata'...
Listing './lib/python3.5/site-packages/webdiff/static/img'...
Listing './lib/python3.5/site-packages/webdiff/static/js'...
Listing './lib/python3.5/site-packages/webdiff/templates'...
Listing './lib/python3.5/site-packages/webdiff-0.14.0.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
